plugins/lombok/testData/diagnostics/kotlin/toString.kt
<!WRONG_ANNOTATION_TARGET!>@file:ToString<!>

import lombok.ToString

<!WRONG_ANNOTATION_TARGET!>@ToString<!>
interface Interface

<!WRONG_ANNOTATION_TARGET!>@ToString<!>
fun func() {}

<!WRONG_ANNOTATION_TARGET!>@ToString<!>
typealias TA = String

val toStringOnAnonymousObject = <!WRONG_ANNOTATION_TARGET!>@ToString<!> object {}
